--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ div.bl-panel-items > div {
 	top: 0;
 	left: 0;
 	position: absolute;
+	text-align: justify;
 }
 
 div.bl-panel-items > div > div {
@@ -294,6 +295,7 @@ div.bl-panel-items > div > div h3 {
 	font-size: 2.4em;
 	font-weight: 300;
 	margin: 0 0 20px 0;
+	text-align: center;
 }
 
 div.bl-panel-items > div > div p {
@@ -328,7 +330,7 @@ div.bl-panel-items nav {
 	position: absolute;
 	z-index: 9999;
 	width: 216px;
-	left: 50%;
+	left: 55.5%;
 	top: 0px;
 	margin-left: -108px;
 	opacity: 0;
@@ -485,4 +487,51 @@ section.bl-expand .bl-icon-close {
 	.bl-content > ul li {
 		width: 40%;
 	}
+}
+
+.bl-content .title {
+	font-size: 1.4em;
+	font-weight: 700;
+}
+
+.name {
+    font-size: 1.1em;
+}
+
+.center {
+	text-align: center;
+}
+
+.image-wrap{
+	border-radius: 3rem;
+	border: 3px solid #fff;
+	width: 80px;
+    height: 80px;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 10px 10px 0 0;
+}
+
+.image-wrap img{
+	width: 100%;
+	border-radius: 3rem;
+}
+
+.bl-content::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.bl-content::-webkit-scrollbar
+{
+	width: 12px;
+}
+
+.bl-content::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
 }
