--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ div.bl-panel-items > div > div {
 	padding-bottom: 15px;
 	font-size: 1.7em;
 	line-height: 1.8;
+	text-align: justify;
 }
 
 .bl-content h2 {
@@ -534,4 +535,27 @@ section.bl-expand .bl-icon-close {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #555;
+}
+
+.bl-box.box-1 {
+    background: url(https://2.bp.blogspot.com/-W1O-VvYSgWs/VZa3_TJk8zI/AAAAAAAAHLg/T9CqONxBs5k/s1600/Saint-%2BBenedict%2B1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    text-shadow: 0 0 10px #FFFFFF;
+}
+
+.bl-box.box-2 {
+    background: url(https://wallpapercave.com/wp/wp2492751.png);
+    background-size: cover;
+    background-position: center;
+    text-shadow: 0 0 10px #FFFFFF;
+    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+}
+
+.bl-box.box-3 {
+    background: url(https://wallpapercave.com/wp/ipH14nd.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    text-shadow: 0 0 10px #FFFFFF;
+    box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
 }
