:bug: add remaining box title

--- a/css/styles.css
+++ b/css/styles.css
@@ -562,4 +562,12 @@ section.bl-expand .bl-icon-close {
 .bl-box.box-3 {
     text-shadow: 0 0 10px #000;
 }
+
+.bl-box.box-4 {
+    text-shadow: 0 0 10px #000;
+}
+
+.bl-box.box-5 {
+    text-shadow: 0 0 10px #000;
+}
 /* END ADDTL CLASS PER BOX TITLE */
